--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,98 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Configure seu primeiro projeto com Squidy em minutos"
 ---
 
-## Get started in three steps
+# 🚀 Quickstart
 
-Get your documentation site running locally and make your first customization.
+Configure seu primeiro projeto com Squidy em 3 passos simples.
 
-### Step 1: Set up your local environment
+## 1. Instalação
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+```bash
+pip install squidy
+```
 
-### Step 2: Deploy your changes
+Verifique a instalação:
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+```bash
+squidy --version
+```
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+## 2. Inicialize seu Projeto
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+Execute o comando `init` para iniciar o setup interativo:
 
-### Step 3: Go live
+```bash
+squidy init
+```
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+O Squidy fará perguntas sobre seu projeto:
 
-## Next steps
+```
+🦑 Setup com Agente IA
 
-Now that you have your docs running, explore these key features:
+🤖 Agente: Olá! Me conte sobre o projeto que você quer configurar.
+           Exemplo: "API REST para delivery com Node e PostgreSQL"
+   
+Você: API REST para delivery com Node e PostgreSQL
 
-<CardGroup cols={2}>
+🤖 Agente: Legal! Qual framework frontend você vai usar?
+   
+Você: React com TypeScript
 
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
+... (mais 2-3 perguntas contextuais) ...
+
+✅ Configuração gerada com sucesso!
+```
+
+## 3. Use com sua IA
+
+Após o setup, instrua seu agente de IA:
+
+> "Acesse `./readme-agent.md` e siga o ritual de onboarding"
+
+Ou para um projeto específico:
+
+```bash
+squidy init ./meu-novo-projeto
+```
+
+## Comandos Úteis
+
+| Comando | Descrição |
+|---------|-----------|
+| `squidy init` | Setup interativo com IA |
+| `squidy audit` | Audita o projeto atual |
+| `squidy status` | Mostra status do projeto |
+
+## Opções do Init
+
+```bash
+# Simular sem criar arquivos (dry-run)
+squidy init --dry-run
+
+# Setup manual (sem IA)
+squidy init --manual
+
+# Especificar diretório
+squidy init ./meu-projeto
+```
+
+## Próximos Passos
+
+<Card
+  title="Comando Init"
+  icon="terminal"
+  href="/commands/init"
+>
+  Detalhes completos do comando de inicialização.
 </Card>
 
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
+<Card
+  title="Conceitos de Governança"
+  icon="shield-check"
+  href="/concepts/governance"
+>
+  Entenda como o Squidy estrutura a governança do projeto.
 </Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
-</CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
